<resources>
    <string name="app_name">Apprenez des langues</string>
    <string name="action_settings">Settings</string>
    <string name="contact_error">Signaler une erreur</string>
    <string name="contact_feedback">Envoyer un email</string>
    <string name="contact_pro">Version PLUS</string>
    <string name="contact_rate">Évaluer l’application</string>
    <string name="contact_website">Visiter le site web</string>
    <string name="nav_home_txt">Accueil</string>
    <string name="nav_gallery_txt">Galerie</string>
    <string name="nav_starred_txt">Favoris</string>
    <string name="nav_stats_txt">Statistiques</string>
    <string name="nav_settings_txt">Paramètres</string>
    <string name="nav_info_txt">Information</string>
    <string name="nav_contact_txt">Contacts/commentaires</string>
    <string name="title_home_txt">Accueil</string>
    <string name="title_gallery_txt">Galerie</string>
    <string name="title_starred_txt">Favoris</string>
    <string name="title_stats_txt">Statistiques</string>
    <string name="title_settings_txt">Paramètres</string>
    <string name="title_info_txt">Information</string>
    <string name="title_contact_txt">Contacts/commentaires</string>
    <string name="title_test_txt">Test</string>
    <string name="title_card_txt">Cartes</string>
    <string name="title_starred_activity">Favoris</string>
    <string name="title_errors_txt">Erreurs</string>
    <string name="title_custom_txt">Liste</string>
    <string name="voc_ex_link_card_title">Cartes</string>
    <string name="voc_ex_link_first_title">Test 1</string>
    <string name="voc_ex_link_second_title">Test 2</string>
    <string name="starred_ex_link_title">Test avec les favoris</string>
    <string name="voc_ex_link_first_desc">Choisir la tradiction</string>
    <string name="voc_ex_link_second_desc">Choisir la tradiction</string>
    <string name="section_ex_link_title_1">Test général 1</string>
    <string name="section_ex_link_title_2">Test général 2</string>
    <string name="section_ex_link_title_3">Test général 3</string>
    <string name="voc_ex_link_third_title">Test 3</string>
    <string name="voc_ex_link_card_desc">Examen des entrées une par une</string>
    <string name="voc_ex_link_third_desc">Choisir la tradiction pour l’audio</string>
    <string name="f_menu_show_translate">Afficher la réponse</string>
    <string name="f_menu_shuffle">Mélanger les cartes</string>
    <string name="f_menu_reflect">Inverser</string>
    <string name="f_menu_restart">Relancer</string>
    <string name="f_activity_title">Cartes</string>
    <string name="f_counter_txt">%1$d / %2$d</string>
    <string name="f_show_translate_txt">AFFICHER LA RÉPONSE</string>
    <string name="f_back_btn_txt">Précédent</string>
    <string name="f_next_btn_txt">Suivant</string>
    <string name="ex_menu_buttons">Boutons</string>
    <string name="set_ex_buttons">Afficher les boutons</string>
    <string name="ex_text_foo">Texte</string>
    <string name="image_desc">Image</string>
    <string name="ex_menu_restart">Relancer</string>
    <string name="ex_counter_txt">%1$d / %2$d</string>
    <string name="ex_option_foo">Option</string>
    <string name="ex_txt_title">Exercice</string>
    <string name="ex_txt_correct">CORRECT</string>
    <string name="ex_txt_incorrect">INCORRECT</string>
    <string name="ex_check_btn_txt">Valider</string>
    <string name="ex_show_result_btn_txt">Afficher le résultat</string>
    <string name="ex_restart_btn_txt">Relancer</string>
    <string name="ex_next_btn_txt">Suivant</string>
    <string name="ex_result_txt_excellent">EXCELLENT!</string>
    <string name="ex_result_txt_verygood">TRÈS BIEN!</string>
    <string name="ex_result_txt_good">BIEN!</string>
    <string name="ex_result_txt_verybad">TRÈS MAL!</string>
    <string name="ex_result_txt_bad">PAS BIEN</string>
    <string name="ex_result_txt">Réponses correctes: %1$d from %2$d \n Résultat:\u00A0\u00A0\u00A0 %3$d%%</string>
    <string name="starred_ex_notif">Il faut ajouter plus de favoris pour que les exercices soient disponibles.</string>
    <string name="starred_limit">La limite de favoris est atteinte.</string>
    <string name="dialog_close_txt">Fermer</string>
    <string name="continue_txt">Continuer</string>
    <string name="menu_item_info">Info</string>
    <string name="starred_lessons_results">Afficher les résultats de leçons</string>
    <string name="set_starred_result_summary">Test results display</string>
    <string name="set_interface">INTERFACE</string>
    <string name="set_app_theme_title">Thèmes</string>
    <string name="set_theme_default_name">Par défaut</string>
    <string name="set_theme_dark_name">Noir</string>
    <string name="set_theme_smoky_name">Sombre</string>
    <string name="set_theme_red_name">Red</string>
    <string name="set_theme_white_name">Blanc</string>
    <string name="set_theme_ww_name">Contraste</string>
    <string name="set_starred_sort_title">Trier la liste des favoris</string>
    <string name="set_starred_sort_sum">Courant: %s</string>
    <string name="set_starred_sort_title_dialog">Trier la liste</string>
    <string name="set_starred_section">FAVORIS</string>
    <string-array name="starred_list_sort">
        <item>Le plus récent en premier</item>
        <item>Le plus récent en dernier</item>
        <item>Selon l’ordre de catégories</item>
    </string-array>
    <string name="set_starred_save_title">Enregistrer les résultats de tests</string>
    <string name="set_starred_save_sum">Courant: %s</string>
    <string name="set_starred_save_title_dialog">Save results</string>
    <string-array name="starred_list_save">
        <item>Derniers résultats </item>
        <item>Meilleurs résultats</item>
    </string-array>
    <string name="set_control_title">Résultats de tests d’une section</string>
    <string name="set_control_summary">Utilser dans les statistiques: %s</string>
    <string name="set_control_dialog_title">Utilser</string>
    <string name="set_control_tests_one">Si les résultats sont meilleurs</string>
    <string name="set_control_tests_two">Toujours</string>
    <string name="set_control_tests_three">Jamais</string>
    <string name="set_test_all_limit_title">Nombre d’items dans le test général </string>
    <string name="set_test_all_limit_summary">Maximum: %s</string>
    <string name="set_test_all_limit_dialog_title">Test général</string>
    <string name="set_test_all_limit_1">30 items</string>
    <string name="set_test_all_limit_2">50 items</string>
    <string name="set_test_all_limit_3">100 items</string>
    <string name="set_btm_nav_title">Barre de navigation en bas</string>
    <string name="set_btm_nav_summary">%s</string>
    <string name="set_btm_nav_dialog_title">Barre de navigation en bas</string>
    <string name="set_btm_nav_1">Afficher la barre et supprimer les éléments dans le menu</string>
    <string name="set_btm_nav_2">Afficher la barre et afficher tous les éléments dans le menu</string>
    <string name="set_btm_nav_3">Ne pas afficher</string>
    <string name="set_btm_nav_4">Afficher la barre et supprimer le menu</string>
    <string name="set_data_control_title">Données pour les statistiques</string>
    <string name="set_data_control_summary">Statistique d’une section inclut: %s</string>
    <string name="set_data_control_dialog_title">Statistique d’une section</string>
    <string name="set_data_control_dates">Thèmes de base seulement</string>
    <string name="set_data_control_all">Thèmes de base et thèmes supplémentaires</string>
    <string name="set_data_mode_title">Mode</string>
    <string name="set_data_mode_summary">Courant: %s</string>
    <string name="set_data_mode_dialog_title">Choisir le mode</string>
    <string name="set_data_mode_default">Standard</string>
    <string name="set_data_mode_easy">Simplifié (seulement des mots et des expressions de base)</string>
    <string name="set_data_mode_advanced">Avancé</string>
    <string name="set_mode_sum">Courant: %s</string>
    <string name="set_mode_default_name">Basique</string>
    <string name="set_mode_full_name">Version PLUS</string>
    <string name="set_show_status">Statut dans les listes</string>
    <string name="set_show_status_summary">Afficher: %s</string>
    <string name="set_show_status_dialog_title">Afficher le statut</string>
    <string name="set_show_status_one">Automatiquement</string>
    <string name="set_show_status_two">Toujours</string>
    <string name="set_show_status_three">Jamais</string>
    <string name="set_detail_txt">Taille du text dans les détails</string>
    <string name="set_detail_txt_summary">Courant: %s</string>
    <string name="set_detail_txt_dialog_title">Font size</string>
    <string name="set_detail_txt_small">Petit</string>
    <string name="set_detail_txt_medium">Moyen</string>
    <string name="set_detail_txt_large">Grand</string>
    <string name="stats_info_txt">Info sur les statistiques</string>
    <string name="starred_lessons_remove">Réinitialiser les résultats</string>
    <string name="title_activity_reference">Référence</string>
    <string name="msg_sending_mail">Envoyer un commentaire &#8230;</string>
    <string name="msg_no_mail_client">lient de messagerie n’est pas installé</string>
    <string name="msg_mail_subject">Commentaire sur l’appli</string>
    <string name="msg_mail_subject_error">Signaler une erreur</string>
    <string name="msg_no_browser">Browser is not installed.</string>
    <string name="no_data_msg">Il n’y a pas de données</string>
    <string name="nav_header_txt">Apprenez des langues! \nC’est cool!</string>
    <string name="menu_easy_mode">Mode simplifié</string>
    <string name="menu_layout">Affichage</string>
    <string name="menu_sort">Trier la liste</string>
    <string name="item_status_familiar">Statut: familier</string>
    <string name="item_status_studied">Statut: maîtrisé</string>
    <string name="set_transcript_title">Transcription</string>
    <string name="set_transcript_summary">Courant: %s</string>
    <string name="set_transcript_dialog">Choisissez la transcription</string>
    <string name="set_speak_title">Activer les sons</string>
    <string name="set_speak_on">Utiliser un synthétiseur vocal</string>
    <string name="set_speak_off">Les sons sont désactivés</string>
    <string name="menu_item_bookmark">Mettre en signet</string>
    <string name="menu_delete_ucat">Supprimer le thème</string>
    <string name="set_night_theme">Mode nuit pour les thèmes claires</string>
    <string name="set_night_theme_on">Activé</string>
    <string name="set_night_theme_off">Désactivé</string>
    <string name="set_tts">Paramètres de la synthèse vocale</string>
    <string name="set_tts_summary">Ouvrir les paramètres de l’appareil</string>
    <string name="set_misc">DIVERS</string>
    <string name="set_backup_title">Exportez/Importez vos données</string>
    <string name="set_backup_desc">Sauvegardes et synchronisation entre les appareils</string>
    <string name="set_version_plus">Version PLUS</string>
    <string name="set_version_plus_summary">Profitez des avantages de la version PLUS!</string>
    <string name="starred_confirm_title">Confirmer la suppression</string>
    <string name="set_starred_confirm_summary">Confirmer la la suppression des favoris</string>
    <string name="item_status_unknown_short">Inconnu</string>
    <string name="item_status_familiar_short">✓ Familier</string>
    <string name="item_status_studied_short">✓ Maîtrisé</string>
    <string name="delete_stats_from_menu">Supprimer les statistiques</string>
    <string name="set_del_cat_stats">Supprimer les statistiques du thème</string>
    <string name="set_del_cat_stats_summary">Afficher le bouton pour supprimer les statistiques dans le menu du thème</string>
    <string name="menu_delete_group">Supprimer la section</string>
    <string name="menu_add_list">Ajouter une liste</string>
    <string name="menu_item_mode">Mode de données</string>
</resources>