<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    app:iconSpaceReserved="false"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:key="interface"
        android:title="@string/set_interface"
        app:iconSpaceReserved="false"
        >

        <Preference
            app:iconSpaceReserved="false"
            android:key="version"
            android:title="@string/set_version_plus"
            android:summary="@string/set_version_plus_summary">
            <intent
                android:targetPackage="@string/app_package"
                android:targetClass="com.online.languages.study.lang.presentation.GetPremium"/>
        </Preference>


        <ListPreference
            android:key="theme"
            android:title="@string/set_app_theme_title"
            android:summary="@string/set_starred_save_sum"
            android:entries="@array/themes"
            android:entryValues="@array/themes_values"
            android:defaultValue="@string/set_theme_default"
            app:iconSpaceReserved="false"
            android:dialogTitle="@string/set_app_theme_title" />


        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            android:key="night_mode"
            android:title="@string/set_night_theme"
            android:summaryOff ="@string/set_night_theme_off"
            android:summaryOn ="@string/set_night_theme_on"
            android:defaultValue="false" />

        <ListPreference
            app:iconSpaceReserved="false"
            android:key="btm_nav"
            android:title="@string/set_btm_nav_title"
            android:summary="@string/set_btm_nav_summary"
            android:entries="@array/set_btm_nav_list"
            android:entryValues="@array/set_btm_nav_values"
            android:defaultValue="@string/set_btm_nav_value_default"
            android:dialogTitle="@string/set_btm_nav_dialog_title" />


        <ListPreference
            app:iconSpaceReserved="false"
            android:key="show_status"
            android:title="@string/set_show_status"
            android:summary="@string/set_show_status_summary"
            android:entries="@array/set_show_status_list"
            android:entryValues="@array/set_show_status_values"
            android:defaultValue="1"
            android:dialogTitle="@string/set_show_status_dialog_title" />


        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            android:key="set_speak"
            android:title="@string/set_speak_title"
            android:summaryOff = "@string/set_speak_off"
            android:summaryOn = "@string/set_speak_on"
            android:defaultValue="true" />

        <ListPreference
            app:iconSpaceReserved="false"
            android:key="set_transript"
            android:title="@string/set_transcript_title"
            android:summary="@string/set_transcript_summary"
            android:entries="@array/set_transcript_list"
            android:entryValues="@array/set_transcript_values"
            android:defaultValue="@string/set_transcript_default"
            android:dialogTitle="@string/set_transcript_dialog" />


    </PreferenceCategory>



    <PreferenceCategory
        android:key="favorites"
        android:enabled="true"
        android:title="@string/set_starred_section">

        <ListPreference
            app:iconSpaceReserved="false"
            android:key="starred_sort_type"
            android:title="@string/set_starred_sort_title"
            android:summary="@string/set_starred_sort_sum"
            android:defaultValue="0"
            android:entries="@array/starred_list_sort"
            android:entryValues="@array/starred_list_sort_values"
            android:dialogTitle="@string/set_starred_sort_title_dialog" />


        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            android:key="set_starred_confirm"
            android:title="@string/starred_confirm_title"
            android:summary = "@string/set_starred_confirm_summary"
            android:defaultValue="true" />


    </PreferenceCategory>


    <PreferenceCategory
        android:key="misc"
        android:title="@string/set_misc"
        android:summary="@string/set_misc"
        >

        <PreferenceScreen
            app:iconSpaceReserved="false"
            android:title="@string/set_backup_title"
            android:summary="@string/set_backup_desc">
            <intent
                android:targetPackage="@string/app_package"
                android:targetClass="com.online.languages.study.lang.presentation.BackupActivity"/>
        </PreferenceScreen>


        <Preference
            app:iconSpaceReserved="false"
            android:key="set_tts"
            android:title="@string/set_tts"
            android:summary="@string/set_tts_summary">

            <intent android:action="com.android.settings.TTS_SETTINGS" />

        </Preference>


        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            android:key="set_del_stats_cat"
            android:title="@string/set_del_cat_stats"
            android:summary = "@string/set_del_cat_stats_summary"
            android:defaultValue="false" />

        <ListPreference
            app:iconSpaceReserved="false"
            android:key="set_transition"
            android:title="Transition"
            android:summary="Transition between activities"
            android:entries="@array/set_transition_list"
            android:entryValues="@array/set_transition_values"
            android:defaultValue="@string/set_transition_default"
            android:dialogTitle="Transition" />


        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            android:key="set_mode_hint"
            android:title="Display mode hint"
            android:defaultValue="false" />



    </PreferenceCategory>



    <PreferenceCategory
        android:key="hidden"
        android:title="">

        <ListPreference
            android:visibility="gone"
            app:iconSpaceReserved="false"
            android:key="sort_pers"
            android:title="@string/set_sort_pers_title"
            android:summary="@string/set_sort_pers_summary"
            android:dialogTitle="@string/set_sort_pers_dialog_title"

            android:entries="@array/set_sort_pers_list"
            android:entryValues="@array/set_sort_pers_values"
            android:defaultValue="@string/set_sort_pers_default"
            />

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            android:key="set_rate_request"
            android:title="Rate request"
            android:defaultValue="true" />


        <ListPreference
            app:iconSpaceReserved="false"
            android:key="detail_txt_size"
            android:title="@string/set_detail_txt"
            android:summary="@string/set_detail_txt_summary"
            android:entries="@array/set_detail_txt_list"
            android:entryValues="@array/set_detail_txt_values"
            android:defaultValue="small"
            android:dialogTitle="@string/set_detail_txt_dialog_title" />


        <SwitchPreferenceCompat
            android:visibility="gone"
            android:key="ex_buttons_show"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:visibility="gone"
            android:key="card_buttons_show"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:visibility="gone"
            android:key="test_all_save"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="full_version"
            android:title="Full version"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="show_ad"
            android:title="Show ads"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="download_notification"
            android:title="Download notification"
            android:summaryOff ="Не отображается"
            android:summaryOn ="Отображается в строке состояния"
            android:defaultValue="false" />


        <ListPreference
            app:iconSpaceReserved="false"
            android:key="data_mode"
            android:title="@string/set_data_mode_title"
            android:summary="@string/set_data_mode_summary"
            android:entries="@array/set_data_mode_list"
            android:entryValues="@array/set_data_mode_values"
            android:defaultValue="@string/set_data_mode_default_value"
            android:dialogTitle="@string/set_data_mode_dialog_title" />


        <ListPreference
            app:iconSpaceReserved="false"
            android:key="data_select"
            android:title="@string/set_data_control_title"
            android:summary="@string/set_data_control_summary"
            android:entries="@array/set_data_control_tests_list"
            android:entryValues="@array/data_control_tests_list_values"
            android:defaultValue="dates"
            android:dialogTitle="@string/set_data_control_dialog_title" />

        <ListPreference
            app:iconSpaceReserved="false"
            android:key="starred_save_type"
            android:title="@string/set_starred_save_title"
            android:summary="@string/set_starred_save_sum"
            android:defaultValue="0"
            android:entries="@array/starred_list_save"
            android:entryValues="@array/starred_list_save_values"
            android:dialogTitle="@string/set_starred_save_title_dialog" />

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            android:key="show_starred_results"
            android:title="@string/starred_lessons_results"
            android:defaultValue="true" />


    </PreferenceCategory>

</PreferenceScreen>