<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <item
        android:id="@+id/info_item"
        android:orderInCategory="100"
        android:icon="@drawable/ic_info"
        android:title="@string/menu_item_info"
        app:showAsAction="never" />

    <item
        android:id="@+id/starred_del_results"
        android:orderInCategory="100"
        android:title="@string/starred_lessons_remove"
        app:showAsAction="never" />

    <item
        android:id="@+id/list_layout"
        android:orderInCategory="100"
        android:icon="@drawable/ic_view_list_big"
        android:title="@string/menu_layout"
        app:showAsAction="always" />



</menu>
