<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/easy_mode"
        android:orderInCategory="50"
        android:icon="?attr/iconSchool"
        android:title="@string/menu_easy_mode"
        android:visible="false"
        app:showAsAction="always" />


    <item
        android:id="@+id/info_from_menu"
        android:orderInCategory="100"
        android:title="@string/menu_item_info"
        app:showAsAction="never" />


    <item
        android:icon="@drawable/ic_delete_toolbar"
        android:id="@+id/delete_note"
        android:orderInCategory="100"
        android:title="@string/menu_delete_group"
        android:visible="false"
        app:showAsAction="never" />



</menu>
