<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:id="@+id/status_wrap"
    android:visibility="gone"
    android:layout_marginTop="9dp"
    >


    <RelativeLayout
        android:layout_marginRight="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:alpha=".7"
            style="@style/cat_item_status.detail"
            android:text="@string/item_status_unknown_short"
            android:id="@+id/statusUnknown"
            android:textColor="?attr/colorUnknown"

            />

        <TextView
            style="@style/cat_item_status.detail"
            android:text="@string/item_status_familiar"
            android:id="@+id/statusKnown"
            android:textColor="?attr/colorKnown"

            />

        <TextView
            style="@style/cat_item_status.detail"
            android:text="@string/item_status_studied"
            android:id="@+id/statusStudied"
            android:textColor="?attr/colorStudied"

            />

    </RelativeLayout>

    <TextView
        android:visibility="gone"
        style="@style/cat_item_status.detail"
        android:ellipsize="middle"
        android:singleLine="true"
        android:id="@+id/errorsCount"
        android:textColor="?attr/colorErrors"

        />


</LinearLayout>